--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -76,12 +76,34 @@
                         android:src="@drawable/img_key" />
 
                     <TextView
-                        android:id="@+id/tv_group_app_key_index"
+                        android:id="@+id/tv_group_app_key"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginStart="10dp"
                         android:text="@string/item_group_app_key"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/img_unicast" />
+
+                    <TextView
+                        android:id="@+id/tv_group_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="10dp"
+                        android:text="@string/item_group_address"
                         android:textColor="@color/black"
                         android:textSize="14sp" />
                 </LinearLayout>
