--- a/app/src/main/res/drawable/background_gradient_blue.xml
+++ b/app/src/main/res/drawable/background_gradient_blue.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="linear"
-        android:angle="0"
+        android:angle="90"
         android:startColor="#e6f2ff"
-        android:centerColor="#Ffffff"
-        android:endColor="#Ffffff" />
+        android:centerColor="@color/white"
+        android:endColor="@color/white" />
 </shape>
