--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -1,43 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:background="@color/white"
+    android:layout_height="match_parent"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/connecting_bar_container"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignParentTop="true">
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tv_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="12 Nodes"
+            android:textColor="#3D3F4F"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_group_connection"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/orange_500"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center"
-            android:text="Connecting"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:visibility="visible" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Connected"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_count" />
 
-        <LinearLayout
-            android:id="@+id/connecting_anim_gradient_right_container"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/img_connection"
-                android:layout_width="5dp"
-                android:layout_height="match_parent"
-                android:src="@color/white" />
-        </LinearLayout>
-    </RelativeLayout>
+        <ProgressBar
+            android:id="@+id/progress_bar_connection"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginStart="10dp"
+            android:indeterminate="true"
+            android:indeterminateTint="#ffad33"
+            android:indeterminateTintMode="src_atop"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_group_connection"
+            app:layout_constraintStart_toEndOf="@id/tv_group_connection"
+            app:layout_constraintTop_toBottomOf="@id/tv_count" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_group_connect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:stateListAnimator="@null"
+            android:text="Connect"
+            android:textAllCaps="false"
+            android:textColor="@color/primary_color"
+            app:backgroundTint="#e6f2ff"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <RelativeLayout
         android:id="@+id/container_group"
@@ -48,8 +75,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_node_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white" />
+            android:layout_height="match_parent"/>
 
         <LinearLayout
             android:id="@+id/no_node_background"
@@ -57,7 +83,6 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginHorizontal="10dp"
-            android:background="@color/white"
             android:gravity="center"
             android:orientation="vertical">
 
