--- a/app/src/main/res/layout/fragment_provision_list.xml
+++ b/app/src/main/res/layout/fragment_provision_list.xml
@@ -14,8 +14,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_provision"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white" />
+            android:layout_height="match_parent" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -71,7 +70,7 @@
         android:id="@+id/scanning_gradient_container"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_above="@id/scanning_separator">
+        android:layout_alignParentBottom="true">
 
         <Button
             android:id="@+id/btn_scanning"
@@ -85,10 +84,4 @@
             android:textSize="18sp" />
     </RelativeLayout>
 
-    <View
-        android:id="@+id/scanning_separator"
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/scanning_bar_shadow" />
 </RelativeLayout>
