--- a/app/src/main/res/layout/fragment_subnet_list.xml
+++ b/app/src/main/res/layout/fragment_subnet_list.xml
@@ -1,25 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp">
+
+    <TextView
+        android:id="@+id/tv_quick_action"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Quick Action"
+        android:textColor="#3D3F4F"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_background_scan"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="8dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toBottomOf="@+id/cv_ota"
+        app:layout_constraintEnd_toStartOf="@id/cv_ota"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_quick_action">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/img_background_scan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_background_scan_on"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_background_scan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Background Scan"
+                android:textColor="#3D3F4F"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/img_background_scan"
+                app:layout_constraintTop_toBottomOf="@id/img_background_scan" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/sw_background_scan"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="true"
+                android:textAlignment="viewStart"
+                android:theme="@style/ColorSwitchStyle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_background_scan" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_ota"
+        android:layout_width="0dp"
+        android:layout_height="140dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="8dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/cv_background_scan"
+        app:layout_constraintTop_toBottomOf="@id/tv_quick_action">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/img_ota"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_update_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_ota_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Device Firmware Update"
+                android:textColor="#3D3F4F"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/img_ota"
+                app:layout_constraintTop_toBottomOf="@id/img_ota" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_ota_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="40dp"
+                android:stateListAnimator="@null"
+                android:text="Start"
+                android:textAllCaps="false"
+                android:textColor="@color/primary_color"
+                app:backgroundTint="#e6f2ff"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_ota_description" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+
+    <TextView
+        android:id="@+id/tv_my_subnet"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="My Subnets"
+        android:textColor="#3D3F4F"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cv_ota" />
+
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_above="@id/scanning_separator"
         android:id="@+id/rv_subnet_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_my_subnet"
+        tools:itemCount="3"
+        tools:listitem="@layout/item_subnet" />
 
     <LinearLayout
-        android:layout_centerInParent="true"
-        android:layout_marginHorizontal="10dp"
         android:id="@+id/no_subnet_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginHorizontal="10dp"
         android:background="@color/white"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:layout_width="180dp"
@@ -30,31 +176,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textColor="@color/black"
             android:gravity="center"
             android:text="@string/fragment_subnet_list_no_subnet_message"
+            android:textColor="@color/black"
             android:textSize="20sp" />
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:textColor="@color/white"
         android:id="@+id/fab_add_subnet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:backgroundTint="@color/primary_color"
-        android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
-        app:iconTint="@color/white"
+        android:backgroundTint="@color/primary_color"
+        android:textColor="@color/white"
+        app:icon="@drawable/ic_add"
         app:iconSize="20sp"
-        android:textSize="12sp"
-        android:text="@string/fragment_subnet_list_add_subnet_fab"
-        app:icon="@drawable/ic_add" />
+        app:iconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <View
-        android:id="@+id/scanning_separator"
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/scanning_bar_shadow" />
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
