--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -1,116 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/tools"
-    android:layout_margin="5dp"
-    android:orientation="horizontal"
-    android:weightSum="10">
+    android:paddingHorizontal="15dp"
+    android:layout_marginVertical="10dp"
+    android:foreground="@drawable/item_ripple_effect">
 
     <androidx.cardview.widget.CardView
-        android:layout_margin="8dp"
+        android:id="@+id/cv_group_image"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:backgroundTint="#80a0ff"
+        app:cardCornerRadius="20dp"
         app:cardPreventCornerOverlap="false"
-        card_view:cardElevation="8dp"
-        card_view:cardUseCompatPadding="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="10dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        card_view:cardElevation="0dp"
+        card_view:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:background="@drawable/background_gradient_blue"
-            android:foreground="@drawable/item_ripple_effect"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp">
+        <ImageView
+            android:id="@+id/iv_bluetooth"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_group" />
 
-            <ImageView
-                android:id="@+id/iv_bluetooth"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:src="@drawable/img_group" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_weight="8"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tv_group_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/item_group_group_name"
-                    android:textColor="@color/primary_color"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tv_group_nodes_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0 Nodes"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/img_key" />
-
-                    <TextView
-                        android:id="@+id/tv_group_app_key"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="10dp"
-                        android:text="@string/item_group_app_key"
-                        android:textColor="@color/black"
-                        android:textSize="14sp" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/img_unicast" />
-
-                    <TextView
-                        android:id="@+id/tv_group_address"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="10dp"
-                        android:text="@string/item_group_address"
-                        android:textColor="@color/black"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tv_group_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="@string/item_group_group_name"
+        android:textColor="#0d1333"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/cv_group_image"
+        app:layout_constraintTop_toTopOf="@+id/cv_group_image" />
+
+    <TextView
+        android:id="@+id/tv_group_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/item_group_address"
+        android:textColor="#61688b"
+        android:textSize="14sp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/cv_group_image"
+        app:layout_constraintStart_toStartOf="@id/tv_group_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_group_name" />
+
+    <TextView
+        android:id="@+id/tv_group_nodes_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0 Nodes"
+        android:textColor="#61688b"
+        android:textSize="16sp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/img_node"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_node"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_node"
+        app:layout_constraintBottom_toBottomOf="@id/tv_group_nodes_count"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_group_nodes_count" />
+
+    <View
+        android:id="@+id/scanning_separator"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/background_gradient_gray"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cv_group_image" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
