--- a/app/src/main/res/layout/fragment_ota_list.xml
+++ b/app/src/main/res/layout/fragment_ota_list.xml
@@ -1,11 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_ota_list"
         android:layout_width="match_parent"
+        tools:itemCount="3"
+        tools:listitem="@layout/item_ota"
         android:layout_height="match_parent"
         android:layout_above="@id/scanning_gradient_container"
         android:background="@color/white" />
@@ -61,8 +64,7 @@
         android:id="@+id/scanning_gradient_container"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        >
+        android:layout_alignParentBottom="true">
 
         <Button
             android:id="@+id/btn_scanning"
@@ -76,10 +78,4 @@
             android:textSize="18sp" />
     </RelativeLayout>
 
-    <View
-        android:id="@+id/scanning_separator"
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:layout_above="@id/scanning_gradient_container"
-        android:background="@drawable/scanning_bar_shadow" />
 </RelativeLayout>
