--- a/app/src/main/res/layout/fragment_provision_list.xml
+++ b/app/src/main/res/layout/fragment_provision_list.xml
@@ -13,6 +13,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_provision"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_unprovisioned_device"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
