--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -1,150 +1,132 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:orientation="horizontal"
-    android:weightSum="10">
+    android:layout_marginVertical="10dp"
+    android:foreground="@drawable/item_ripple_effect"
+    android:paddingHorizontal="15dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_node_feature"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        app:cardCornerRadius="20dp"
         app:cardPreventCornerOverlap="false"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        app:cardCornerRadius="10dp"
-        card_view:cardElevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        card_view:cardElevation="0dp"
         card_view:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:background="@drawable/background_gradient_gray"
-            android:foreground="@drawable/item_ripple_effect"
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <ImageView
+            android:id="@+id/img_node_feature"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"/>
 
-            <RelativeLayout
-                android:paddingHorizontal="10dp"
-                android:layout_gravity="center_vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_marginStart="10dp"
-                    android:id="@+id/tv_node_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/item_node_node_name"
-                    android:textColor="@color/primary_color"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_alignParentEnd="true"
-                    android:id="@+id/tv_node_proxy"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Active Proxy Connection"
-                    android:textColor="#4CAF50"
-                    android:textSize="14sp" />
-            </RelativeLayout>
-
-            <LinearLayout
-                android:paddingHorizontal="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:gravity="center_vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="9"
-                    android:orientation="vertical">
-
-
-                    <TextView
-                        android:id="@+id/tv_node_address"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/item_node_node_address"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <LinearLayout
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/img_status" />
-
-                        <TextView
-                            android:id="@+id/tv_node_status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="10dp"
-                            android:text="@string/item_node_node_status"
-                            android:textColor="@android:color/black"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:src="@drawable/img_battery" />
-
-                        <TextView
-                            android:id="@+id/tv_node_battery"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="10dp"
-                            android:text="Plugging"
-                            android:textColor="@android:color/black"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:visibility="invisible"
-                        android:id="@+id/img_flame_signal"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp" />
-
-                    <ImageView
-                        android:id="@+id/img_node_feature"
-                        android:layout_width="36dp"
-                        android:layout_height="40dp"
-                        android:layout_marginTop="6dp" />
-                </LinearLayout>
-            </LinearLayout>
-
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 
-</LinearLayout>
+    <TextView
+
+        android:id="@+id/tv_node_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="@string/item_scanned_device_device_name"
+        android:textColor="#0d1333"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/cv_node_feature"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/tv_node_proxy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="(Active Proxy)"
+        android:textColor="@color/primary_color"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_node_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_node_name" />
+
+    <TextView
+        android:id="@+id/tv_node_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00:00:00:00"
+        android:textColor="#61688b"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@id/tv_node_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_node_name" />
+
+    <ImageView
+        android:id="@+id/img_node_status"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="6dp"
+        android:src="@drawable/ic_status"
+        app:layout_constraintStart_toStartOf="@id/tv_node_address"
+        app:layout_constraintTop_toBottomOf="@id/tv_node_address" />
+
+    <TextView
+        android:id="@+id/tv_node_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="Alive"
+        android:textColor="#61688b"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/img_node_status"
+        app:layout_constraintStart_toEndOf="@id/img_node_status"
+        app:layout_constraintTop_toTopOf="@id/img_node_status" />
+
+    <ImageView
+        android:id="@+id/img_battery"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="6dp"
+        android:src="@drawable/ic_battery"
+        app:layout_constraintStart_toStartOf="@id/tv_node_address"
+        app:layout_constraintTop_toBottomOf="@id/img_node_status" />
+
+    <TextView
+        android:id="@+id/tv_node_battery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="Plugging"
+        android:textColor="#61688b"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/img_battery"
+        app:layout_constraintStart_toEndOf="@id/img_battery"
+        app:layout_constraintTop_toTopOf="@id/img_battery" />
+
+    <ImageView
+        android:id="@+id/img_flame_signal"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <View
+        android:id="@+id/scanning_separator"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/background_gradient_gray"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_battery" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
